# specification_curve

./: .buildinfo  .cookiecutter.json  .gitignore  .nojekyll  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api.html  codecov.yml  contributing.html  features.html  genindex.html  history.html  index.html  noxfile.py  objects.inv  pyproject.toml  pyproject_old.toml  requirements_dev.txt  search.html  search.json  searchindex.js  setup.cfg  setup.py  spec_curve_dev.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
_modules/: index.html  specification_curve.html
_sources/: index.ipynb
benchmarks/: benchmark.py
docs/: Makefile  _config.yml  _quarto.yml  _toc.yml  api.rst  conf.py  contributing.md  features.ipynb  history.md  index.ipynb  index.rst  installation.rst  make.bat  objects.json  reference.rst  references.bib  usage.rst
reference/: SpecificationCurve.html  index.html  load_example_data1.html  load_example_data2.html  load_example_data3.html
specification_curve/: __init__.py  example.py  specification_curve.py
src/specification_curve/: __init__.py  __main__.py  example.py  specification_curve.py
src/specification_curve/data/: example_data.csv
tests/: __init__.py  conftest.py  test_specification_curve.py
