[project]
name = "specification-curve"
version = "0.3.3"
description = "Specification_Curve"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas-stubs>=2.2.2.240807",
    "pandas>=2.2.3",
    "statsmodels>=0.14.4",
    "typeguard>=4.4.1",
    "types-setuptools>=75.6.0.20241223",
]

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "ipykernel>=6.29.5",
    "mypy>=1.14.0",
    "nbstripout>=0.8.1",
    "nox>=2024.10.9",
    "pandas-stubs>=2.2.2.240807",
    "pre-commit-hooks>=5.0.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "quartodoc>=0.9.1",
    "ruff>=0.8.4",
    "toml>=0.10.2",
    "types-setuptools>=75.6.0.20241223",
    "xdoctest>=1.2.0",
]


[[tool.mypy.overrides]]
module = ["statsmodels.*", "scipy.stats.*"]
ignore_missing_imports = true
