[project]
name = "specification_curve"
version = "0.3.6"
description = "Specification_Curve"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas-stubs>=2.2.2.240807",
    "pandas>=2.2.3",
    "statsmodels>=0.14.4",
    "typeguard>=4.4.1",
    "types-setuptools>=75.6.0.20241223",
    "nbclient>=0.10.2",
]

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "ipykernel>=6.29.5",
    "mypy>=1.14.0",
    "nbstripout>=0.8.1",
    "nox>=2024.10.9",
    "pandas-stubs>=2.2.2.240807",
    "pre-commit-hooks>=5.0.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "quartodoc>=0.9.1",
    "ruff>=0.8.4",
    "toml>=0.10.2",
    "types-setuptools>=75.6.0.20241223",
    "xdoctest>=1.2.0",
]


[[tool.mypy.overrides]]
module = ["statsmodels.*", "scipy.stats.*"]
ignore_missing_imports = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.coverage.report]
show_missing = true
fail_under = 98

[tool.coverage.run]
branch = true
source = ["specification_curve"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.setuptools.packages.find]
where = ['src']
exclude = ['.gitignore']

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
specification_curve=['*.csv']

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
